xcb: Fix setting the alert state for a window

Send a _NET_WM_STATE client message to the root window
instead of changing the window property.

Task-number: QTBUG-41310
Change-Id: I864af0158ec55796bb3cbc123469709b2be54ec8
Reviewed-by: Martin Gräßlin <mgraesslin@kde.org>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>